--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: root
-  password: root
+  username: 
+  password: 
   
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
@@ -27,8 +27,8 @@ default: &default
 development:
   <<: *default
   database: my_app_development
-  username: root
-  password: root
+  username: 
+  password: 
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
